--- a/views/club_dashboard.ejs
+++ b/views/club_dashboard.ejs
@@ -93,6 +93,10 @@
       <i class="fas fa-upload"></i>
       Upload Merchandise
     </button>
+    <button class="club-dashboard-btn club-dashboard-btn-secondary" >
+      <i class="fa-solid fa-address-book"></i>
+     <a href="/clubs/update_leader"> Manage Your Leaders</a>
+    </button>
   </div>
 
   <div class="club-dashboard-content-grid">
@@ -166,7 +170,7 @@
           <div>
             <% if (user.captain) { %>
               <h4>
-                <%= user.captain %>
+                <%= user.captain.name %>
               </h4>
               <% }else{ %>
                 <h4>Not Assigned</h4>
@@ -233,7 +237,7 @@
                     <div style="font-size: 1.2rem; font-weight: 600; color: #333;">
                       <%= user.wicket_keeper.total_runs %> runs
                     </div>
-                    <div style="font-size: 0.9rem; color: #666;">SR: <%= user.wicket_keeper.SR %>
+                    <div style="font-size: 0.9rem; color: #666;">SR: <%= user.wicket_keeper.SR %> %
                     </div>
                   </div>
                 </div>
