--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="/styles/update_score.css">
     <link rel="stylesheet" href="/styles/login_leagues.css">
     <link rel="stylesheet" href="/styles/live_score.css">
+    <link rel="stylesheet" href="/styles/leader_selection.css">
     <link rel="stylesheet" href="/styles/specific_scorecard.css">
     <title>Crossfit</title>
 </head>
@@ -37,5 +38,7 @@
     <script src="/script/update_score.js"></script>
     <script src="/script/live_score.js"></script>
     <script src="/script/specific_scorecard.js"></script>
+    <script src="/script/leader_selection.js"></script>
+    <script src="/script/club_enlistpage.js"></script>
 </body>
 </html>
