--- a/views/match_setup.ejs
+++ b/views/match_setup.ejs
@@ -35,9 +35,11 @@
             <select id="wicket_keeper" name="wicket_keeper" required>
                 <option  disabled selected >--select--</option>
                 <% user.players.forEach(player=> { %>
-                    <option value="<%= player._id %>">
-                        <%= player.name %>
-                    </option>
+                    <% if (player.type === "wicket_keeper") { %>
+                        <option value="<%= player._id %>">
+                            <%= player.name %>
+                        </option>
+                    <% } %>
                     <% }) %>
             </select>
         </div>
